# weatherlight

./: .gitignore  BusyLight Library ReadMe.txt  LICENSE  OpenWeatherMap 5 day weather forecast API documentation.txt  README.md  Temperature Color Mappings.txt  generate_scale.js  package-lock.json  package.json  supported.json  test-busylight.js  test.rs
_electron_backup/: package.json
_electron_backup/lib/: busylight.js  degamma.js
_electron_backup/scripts/: afterPack.js
_electron_backup/src/: icon_generator.html  settings.html  settings.js
_electron_backup/src/services/: busylight-service.js  config-service.js  weather-service.js
docs/: ARCHITECTURE.md
lib/: busylight.js  index.js  stepper.js
src/: api.js  color-scale.js  icon_generator.js  index.html  location.html  main.js  package.json  preload.js  renderer.js  settings.html  settings.js
src-tauri/: Cargo.toml  build_errors.txt  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: busylight.rs  config.rs  lib.rs  main.rs  models.rs  tray.rs  weather.rs
src/services/: busylight-service.js  config-service.js  weather-service.js
