[package]
name = "weatherlight"
version = "0.1.0"
description = "WeatherLight Ambient Controller"
authors = ["Jon"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "weatherlight_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls-native-roots"] }
hidapi = "2.6.4"
image = "0.25.9"
tokio = { version = "1.49.0", features = ["full"] }
lazy_static = "1.5.0"
chrono = { version = "0.4.43", features = ["serde"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-single-instance = "2.4.0"
urlencoding = "2.1.3"
dirs = "6.0.0"

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
